--- a/defibrillators/index.html
+++ b/defibrillators/index.html
@@ -2,6 +2,8 @@
 <html lang="en-GB">
     <head>
         <meta charset="UTF-8"/>
+        <meta name="keywords" content="defibrillators, defibrillator, defibrillation, automated external defibrillator, aed, trafford, open data, map, mapping"/>
+        <meta name="description" content="Map showing the location of defibrillators in Trafford"/>
         <title>Trafford Data Lab: Defibrillators</title>
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
