Altered the size of the marker hit area so that it is closer to the size of the marker and removed the previous R version of the map.

--- a/defibrillators/index.html
+++ b/defibrillators/index.html
@@ -39,11 +39,13 @@
 
         <script>
             var defaultMarker = L.AwesomeMarkers.icon({
-                markerColor: 'pin-circle-orange-bright'
+                markerColor: 'pin-circle-orange-bright',
+                iconSize: [20, 39]
             });
 
             var selectedMarker = L.AwesomeMarkers.icon({
-                markerColor: 'pin-circle-yellow-bright'
+                markerColor: 'pin-circle-yellow-bright',
+                iconSize: [20, 39]
             });
 
             function highlightMarker(e) {
